Specify the deploy dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
   ci:
     name: CI
     runs-on: ubuntu-latest
+    env:
+      DEPLOY_DIR: book/html
     steps:
     - uses: actions/checkout@v2
     - name: Build the book
