--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     name: CI
     runs-on: ubuntu-latest
     env:
-      DEPLOY_DIR: book/html
+      DEPLOY_DIR: book
     steps:
     - uses: actions/checkout@v2
     - name: Build the book
@@ -20,7 +20,6 @@ jobs:
     - name: Deploy to gh-pages
       if: github.event_name == 'push' && github.repository == 'JohnTitor/perf-book-ja'
       run: |
-        touch "${{ env.DEPLOY_DIR }}/.nojekyll"
         cd "${{ env.DEPLOY_DIR }}"
         rm -rf .git
         git init
