--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       DEPLOY_DIR: book
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node
+    - uses: actions/setup-node@v2
       with:
         node-version: '14.x'
     - run: |
