--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,13 @@ on:
 jobs:
   ci:
     name: CI
-    runs-on: ubuntu-latest
-    env:
-      DEPLOY_DIR: book
+    runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
-        node-version: '14.x'
+        node-version: 16
+        cache: 'yarn'
     - run: |
         npm ci
         npm run lint
