Show the latest commit of the orig URL
Signed-off-by: Yuki Okushi <jtitor@2k36.org>

--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,6 @@
 [book]
-title = "The Rust Performance Book"
-authors = ["Nicholas Nethercote"]
+title = "The Rust Performance Book for Japanese"
+authors = ["Nicholas Nethercote", "Yuki Okushi"]
 language = "ja"
 
 [build]
